--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     border: none;
     outline: none;
     text-decoration: none;
+    user-select: none;
 }
 
 @font-face {
@@ -99,8 +100,71 @@ body{
 }
 
 
+.container-banner {
+    height: 80dvh;
+    padding: 0 2rem;
+    
+}
 
+.container-banner > .banner{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: url(../img/travel.jpeg) no-repeat  ;
+    background-size: cover;
+    background-position: 100%;
+    border-radius: .8rem;
+    padding: 2rem;
+    object-fit: cover;
+    position: relative;
+    overflow: hidden;
+}
+.container-banner > .banner::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    background: #0000006b;
+    pointer-events: none;
+    z-index: 1;
+}
+.container-banner  .banner  > .banner-content{
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    gap:0.8rem;
+}
+.container-banner  .banner  .banner-content > h3{
+    font-size: 1.8rem;
+    font-weight:800 ;
+    text-transform: uppercase;
+    color: #fff;
+}
 
+.container-banner  .banner  .banner-content > p{
+    font-size: .9rem ;
+    font-weight: 400;
+    color: #fff;
+}
+
+.container-banner  .banner  .banner-content > a{
+    padding: .8rem;
+    width: 30%;
+    color: #fff;
+    font-size: 1rem;
+    background: #0D99FF;
+    border-radius: .4rem;
+    text-align: center;
+    transition: all .4s ease-in-out;
+    cursor: pointer;
+}
+
+.container-banner  .banner  .banner-content > a:hover{
+    background: #0b7bcc;
+}
 
 
 
