--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     outline: none;
     text-decoration: none;
     user-select: none;
+    list-style: none;
 }
 
 @font-face {
@@ -13,10 +14,11 @@
     src: url(../font/SpaceGrotesk-VariableFont_wght.ttf);
 }
 
+
 body{
     font-size: 62.5%;
     font-family: 'SpaceGrotesk', sans-serif;
-    
+    background: rgb(245, 245, 245);
 }
 
 
@@ -25,7 +27,20 @@ body{
     display: flex;
     justify-content: space-between;
     padding:  2rem;
-    //box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    
+
+}
+
+.container-header .Header-fixed{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+    background: #ffff;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 
 }
 
@@ -96,7 +111,7 @@ body{
 .container-header header > .container-notif > .notif:hover{
     
     background: #e2e1e1;
-    color: #0D99FF;
+    color: rgb(22, 93, 252);
 }
 
 
@@ -111,7 +126,7 @@ body{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: url(../img/travel.jpeg) no-repeat  ;
+    background: url(../img/tarcio.jpg) no-repeat  ;
     background-size: cover;
     background-position: 100%;
     border-radius: .8rem;
@@ -126,7 +141,7 @@ body{
     height: 100%;
     width: 100%;
     left: 0;
-    background: #0000006b;
+    background: #00000044;
     pointer-events: none;
     z-index: 1;
 }
@@ -139,15 +154,21 @@ body{
 }
 .container-banner  .banner  .banner-content > h3{
     font-size: 1.8rem;
-    font-weight:800 ;
+    font-weight:900 ;
     text-transform: uppercase;
     color: #fff;
+    line-height: 2.4rem;
+}
+.container-banner  .banner  .banner-content  h3 > span{
+    color:rgb(22, 93, 252);
 }
 
 .container-banner  .banner  .banner-content > p{
-    font-size: .9rem ;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 400;
-    color: #fff;
+    font-size: .9rem ;
+    line-height: 1.2rem;
+    color: #fdfafa;
 }
 
 .container-banner  .banner  .banner-content > a{
@@ -155,7 +176,7 @@ body{
     width: 30%;
     color: #fff;
     font-size: 1rem;
-    background: #0D99FF;
+    background: rgb(22, 93, 252);
     border-radius: .4rem;
     text-align: center;
     transition: all .4s ease-in-out;
@@ -163,15 +184,110 @@ body{
 }
 
 .container-banner  .banner  .banner-content > a:hover{
-    background: #0b7bcc;
+    background: rgb(22, 93, 252);
+}
+
+.section-1{
+    padding: 8rem 3rem;
+}
+
+.section-1 > h2{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 4rem;
+   
+}
+.section-1 > .section-1-img{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.card-packages{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    background: rgb(255, 255, 255);
+    border-radius: 0.8rem;
+    padding: 1rem 2rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 6px 6px 10px;
+    transition: 0.4s ease-in-out;
+    
+
+}
+
+.card-packages > ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    
+    row-gap: 1rem;
+    margin: 3.2rem 0px;
 }
 
 
+.card-packages ul > li {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.card-packages ul li > h4{
+    
+        font-size: 1rem;
+        color: rgb(0, 0, 0);
+        font-weight: 400;
+        line-height: 2rem;
+        text-align: justify;
+    }
+
+    .card-packages ul li > span{
+    
+        color: rgb(22, 93, 252);
+    font-size: 1.5rem;
+    }
+    .card-packages > button {
+        background: rgb(22, 93, 252);
+        padding: 1rem;
+        width: 100%;
+        border-radius: 0.4rem;
+        color: rgb(255, 255, 255);
+        font-size: 1rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .card-packages > h3{
+        font-size: 1.4rem;
+        text-align: center;
+        color: rgb(0, 0, 0);
+    }
+
+    .card-packages h1 > span {
+        font-size: 1rem;
+        text-align: center;
+    }
+    .card-packages h1 {
+        color: rgb(22, 93, 252);
+    }
 
 @media (max-width: 840px){
 
     .container-header header > .container-search{
         display: none;
+    }
+
+    .container-banner{
+        padding: 0 1rem;
+    }
+
+    .section-1{
+        padding:8rem 1rem;
     }
     
 }
